# LibrewolfProfiles

./: .gitignore  LICENSE  README.md  io.github.saleguas.librewolfprofiles.yml  meson.build
data/: io.github.saleguas.librewolfprofiles.desktop  io.github.saleguas.librewolfprofiles.metainfo.xml  meson.build
docs/: flathub-submission.md
flatpak/screenshots/: README.md
src/: io.github.saleguas.librewolfprofiles.in  meson.build
src/librewolf_profiles/: __init__.py  app.py  backend.py  main.py
tests/: test_backend.py
tools/: flatpak-menu.sh  install-local-wrapper.sh  run-app.sh
tools/local/: librewolf-profile-launcher.sh
